--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "grunt-contrib-watch": "~1.0.0",
     "grunt-mocha-istanbul": "~3.0.1",
     "grunt-mocha-test": "~0.12.7",
+    "httpster": "^1.0.3",
     "ink-docstrap": "^1.1.4",
     "istanbul": "~0.4.0",
     "js-yaml": "^3.4.2",
@@ -77,6 +78,7 @@
     "mocha": "~2.4.5",
     "mocha-sinon": "~1.1.0",
     "nock": "~7.2.1",
+    "nodemon": "^1.9.1",
     "sinon": "~1.17.3",
     "sinon-chai": "~2.8.0",
     "time-grunt": "~1.3.0",
